objects/ACCObjTest1__c.object
<CustomObject>
    <description>test11</description>
    <fields>
        <fullName>ACCField1__c</fullName>
        <description>Test12312454656511111</description>
        <label>ACCField1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCField2__c</fullName>
        <label>ACCField2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>Ex11ternal Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N1__c</fullName>
        <description>124</description>
        <label>N1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12345</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PLt1__c</fullName>
        <label>PLt1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plt3__c</fullName>
        <label>Plt3</label>
        <type>Phone</type>
    </fields>
    <label>ACCObjTest1</label>
    <nameField>
        <label>ACCObjTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>